--- a/service.html
+++ b/service.html
@@ -128,8 +128,8 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Oleaje</h4>
-                            <p>Modelación de parámetros de diseño de oleaje.</p>
+                            <h4 class="mb-3">Parámetros de diseño</h4>
+                            <p>Modelación de parámetros de diseño.</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                             <div class="service-icon">
                                 <i class="fa fa-wind fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Corrientes</h4>
+                            <h4 class="mb-3">Caracterización de variables</h4>
                             <p>Modelación del campo de velocidad.</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
@@ -167,7 +167,7 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Nivel del mar</h4>
+                            <h4 class="mb-3">Pronóstico de condiciones oceanográficas</h4>
                             <p>Modelación del nivel del mar</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
@@ -180,7 +180,7 @@
                             <div class="service-icon">
                                 <i class="fa fa-wind fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Viento</h4>
+                            <h4 class="mb-3">Altura de la ola</h4>
                             <p>Modelación de las condiciones del viento.</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
@@ -212,8 +212,8 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <h6 class="text-primary">Why Choose Us!</h6>
-                        <h1 class="mb-4">Complete Commercial & Residential Solar Systems</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <h1 class="mb-4">Estamos comprometidos con el uso óptimo de los recursos marinos</h1>
+                        <p class="mb-4 pb-2">El desarrollo y aplicación de metodologías que usamos están acreditadas con las publicaciones científicas del momento</p>
                         <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
@@ -221,8 +221,8 @@
                                         <i class="fa fa-check text-white"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="mb-0">Quality</p>
-                                        <h5 class="mb-0">Services</h5>
+                                        <p class="mb-0">Calidad</p>
+                                        <h5 class="mb-0">Servicio</h5>
                                     </div>
                                 </div>
                             </div>
@@ -232,8 +232,8 @@
                                         <i class="fa fa-user-check text-white"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="mb-0">Expert</p>
-                                        <h5 class="mb-0">Workers</h5>
+                                        <p class="mb-0">Analistas</p>
+                                        <h5 class="mb-0">Expertos</h5>
                                     </div>
                                 </div>
                             </div>
@@ -243,8 +243,8 @@
                                         <i class="fa fa-drafting-compass text-white"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="mb-0">Free</p>
-                                        <h5 class="mb-0">Consultation</h5>
+                                        <p class="mb-0">Análisis</p>
+                                        <h5 class="mb-0">Tecnología</h5>
                                     </div>
                                 </div>
                             </div>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/portada_4.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
@@ -273,57 +273,6 @@
     <!-- Feature End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h6 class="text-primary">Testimonial</h6>
-                <h1 class="mb-4">What Our Clients Say!</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
         
 
     <!-- Footer Start -->
